k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice
  namespace: microservice
  labels:
    app: microservice
spec:
  type: ClusterIP
  selector:
    app: microservice
  ports:
    - name: http
      port: 80
      targetPort: http
