k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice
  namespace: microservice
  annotations:
    nginx.ingress.kubernetes.io/app-root: /health
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: microservice
            port:
              number: 80
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: microservice
            port:
              number: 80
